<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_Cst" Id="{d03c438b-03a9-45d6-84f6-ef791006a1c0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
		CstNbAOEntries			: INT :=  50 ;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>